test version tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been failed to release.'
 
   tag:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} || ${{ github.event.workflow_run.workflow_dispatched }}
     name: Create Tag
     runs-on: ubuntu-latest
     outputs:
@@ -66,4 +66,4 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         with:
-          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been released to {{ needs.tag.outputs.tag_name }}.'
+          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been released to ${{needs.tag.outputs.tag_name}}.'
