--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been failed to release.'
 
   tag:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} || ${{ github.event.workflow_run.workflow_dispatched }}
     name: Create Tag
     runs-on: ubuntu-latest
     outputs:
