--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,5 @@ venv
 output.txt
 pytest_cache
 .vscode
-docker-data/dms/mail*
-#^docker-data/dms/config/postfix-master.cf
-/docker-data/dms/config/
+docker/docker-data/dms/mail*
+docker/docker-data/dms/config/
